<resources>

    <string name="app_name">CMIS : Blend</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">The Blend. CMIS in Action.</string>

    <!-- Main Page Menu -->
    <string name="menu_manning">Manning Publications</string>
    <string name="menu_manning_url">http://www.manning.com/</string>
    <string name="menu_chemistry">Apache Chemistry</string>
    <string name="menu_chemistry_url">http://chemistry.apache.org/</string>
    <string name="menu_cmis_specification">CMIS Specification</string>
    <string name="menu_cmis_specification_url">http://docs.oasis-open.org/cmis/CMIS/v1.0/cs01/cmis-spec-v1.0.html</string>
    <string name="menu_cmis_chemistry">CMIS and Apache Chemistry</string>
    <string name="menu_cmis_chemistry_url">http://www.manning.com/</string>
    <string name="menu_javadoc">OpenCMIS JavaDoc</string>
    <string name="menu_javadoc_url">http://chemistry.apache.org/java/0.8.0/maven/apidocs/</string>

    <!-- Login Page -->
    <string name="login_top_text">Mixed it. Mash it. Blend it. Rock it.</string>
    <string name="login_main_text">The Blend.</string>
    <string name="title_loginactivity">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hostname">Hostname</string>
    <string name="hostname_hint">http://hostname:port/inmemory (required)</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>

    <!-- Create Session -->
    <string name="create_session_title">Session creation</string>
    <string name="create_session_description">Connection to the CMIS Server &#8230;</string>

    <!-- Add Album -->
    <string name="menu_add">Add album</string>
    <string name="cancel">Cancel</string>
    <string name="add_album_title">Create Album</string>
    <string name="create_add_album">Create it now !</string>
    <string name="add_album_where">Where ?</string>
    <string name="add_album_name">Title ?</string>
    <string name="add_album_default_path">/blend</string>

    <!-- Add Tracks -->
    <string name="add">Add</string>
    <string name="menu_add_track">Add Track</string>
    <string name="add_track_id">Track Id ?</string>

    <!-- Albums List -->
    <string name="title_album">The Blend : Albums list</string>
    <string name="no_albums">No Albums</string>

    <!-- Albums Details -->
    <string name="title_details">The Blend</string>
    <string name="no_tracks">No tracks</string>
    <string name="menu_tracks">Tracks</string>
    <string name="menu_properties">Properties</string>
    <string name="menu_rename">Rename</string>
    <string name="download">Download</string>
    <string name="download_progress">Download in progress</string>
    <string name="no_player">Unable to find an application to open this track.</string>
    <string name="error_download">An error occurs during the download. Please retry.</string>
    

</resources>