<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_top_text"
            android:layout_marginTop="20dip"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:padding="10dip"
            android:text="@string/login_main_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hostname" />

        <EditText
            android:id="@+id/repository_hostname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hostname_hint"
            android:inputType="text"
            android:text="http://192.168.1.36:8081/inmemory/atom" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/repository_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/required"
            android:inputType="text"
            android:text="admin" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/password" />

        <EditText
            android:id="@+id/repository_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/required"
            android:inputType="textPassword"
            android:text="admin" >
        </EditText>

        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:text="Connect" />
    </LinearLayout>

</ScrollView>